--- a/config.toml
+++ b/config.toml
@@ -7,7 +7,7 @@ taxonomies = [
     {name = "tags", feed = true},
 ]
 [extra]
-even_title = "MGT'GitBlog"
+even_title = "MGT'Blog"
 even_menu = [
     {url = "$BASE_URL", name = "Home"},
     {url = "$BASE_URL/tags/", name = "Tags"},
