--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-base_url = "https://692.github.io/gblog/"
+base_url = "https://692.github.io/gitblog/"
 generate_feeds = true
 feed_filenames = ["rss.xml"]
 theme = "even"
