--- a/config.toml
+++ b/config.toml
@@ -15,5 +15,5 @@ even_menu = [
     {url = "$BASE_URL/milestones/", name = "milestones"},
     {url = "$BASE_URL/tags/top/", name = "Top"},
     {url = "$BASE_URL/issue-2/", name = "About"},
-    {url = "https://github.com/692/gitblog/issues", name = "GitHub"},
+    {url = "https://github.com/692/gitblog/issues target="_blank"", name = "GitHub"},
 ]
