--- a/config.toml
+++ b/config.toml
@@ -13,5 +13,5 @@ even_menu = [
     {url = "$BASE_URL/tags/", name = "Tags"},
     {url = "$BASE_URL/tags/top/", name = "Top"},
     {url = "$BASE_URL/issue-2/", name = "About"},
-    {url = "https://github.com/692/gitblog/issues target="_blank"", name = "GitHub"},
+    {url = "https://github.com/692/gitblog/issues", name = "GitHub"},
 ]
